fixed feed headers + ride collapse

--- a/src/components/modules/RideFeed/RideFeed.css
+++ b/src/components/modules/RideFeed/RideFeed.css
@@ -24,12 +24,34 @@
   font-size: 20px;
 }
 
+.instant-table-header {
+  display: flex;
+  flex-flow: row;
+  min-height: 30px;
+  min-width: 200px;
+  width: 100%;
+  color: #3d77ff;
+  align-items: center;
+  font-weight: 550;
+  margin-left: 40px;
+  font-size: 20px;
+  padding-right: 40px;
+}
+
 .from-to-title {
   width: 23%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+}
+
+.instant-book-title {
+  width: 12.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 45px;
 }
 
 .remaining-titles {
